--- a/alan-farcas.html
+++ b/alan-farcas.html
@@ -38,7 +38,7 @@
                                 <a href="portfolio-nazca.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="team-nazca.html">Team</a>
+                                <a href="team-all.html">Team</a>
                             </li>
                             <li>
                                 <a href="contact-nazca.html">Contact</a>
@@ -54,8 +54,8 @@
         <!-- .navbar -->
         <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
-        </div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
+        </div> -->
         <nav class="country">
             <ul>
                 <a href="team-all.html">All</a>
@@ -67,7 +67,7 @@
         </nav>
         <div class="profile-container">
             <div class="profile-photo">
-                <img src="http://placehold.it/500x500" class="photo-resize" />
+                <img src="style/images/art/alanB.jpg" class="photo-resize" />
             </div>
             <div class="profile-info">
                 <h2 class="profile-name">Alan Farcas</h2>
