--- a/aleka-quintana.html
+++ b/aleka-quintana.html
@@ -38,7 +38,7 @@
                                 <a href="portfolio-nazca.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="team-nazca.html">Team</a>
+                                <a href="team-all.html">Team</a>
                             </li>
                             <li>
                                 <a href="contact-nazca.html">Contact</a>
@@ -54,8 +54,8 @@
         <!-- .navbar -->
         <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
-        </div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
+        </div> -->
         <nav class="country">
             <ul>
                 <a href="team-all.html">All</a>
@@ -72,7 +72,7 @@
             <div class="profile-info">
                 <h2 class="profile-name">Aleka Quintana</h2>
                 <h5>Corporate Law</h5>
-                <p class="bio">Aleka is the Corporate Lawyer at Mountain Nazca, prior to MP, she used to work in a big corporative law firm. Then, became a human rights lawyer for about three years, time in which she had the opportunity to work as a volunteer in Africa. Now she´s glad to be part of the entrepreneur world combining helping people create new ideas and her expertise in corporative law.</p>
+                <p class="bio">Aleka is the Corporate Lawyer at Mountain Nazca, prior to MN, she used to work in a big corporative law firm. Then, became a human rights lawyer for about three years, time in which she had the opportunity to work as a volunteer in Africa. Now she´s glad to be part of the entrepreneur world combining helping people create new ideas and her expertise in corporative law.</p>
 
                 <div class="social-icons">
                     <a class="linkedin"><a href="https://mx.linkedin.com/in/alejandra-quintana-64a247ba" target="_blank"><img src="style/images/art/btn-linkedin.png"></a>
