--- a/pablo-rivero.html
+++ b/pablo-rivero.html
@@ -38,7 +38,7 @@
                                 <a href="portfolio-nazca.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="team-nazca.html">Team</a>
+                                <a href="team-all.html">Team</a>
                             </li>
                             <li>
                                 <a href="contact-nazca.html">Contact</a>
@@ -54,8 +54,8 @@
         <!-- .navbar -->
         <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
-        </div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes
+        </div> -->
         <nav class="country">
             <ul>
                 <a href="team-all.html">All</a>
@@ -72,8 +72,7 @@
             <div class="profile-info">
                 <h2 class="profile-name">Pablo Rivero</h2>
                 <h5>Associate</h5>
-                <p class="bio">Prior to Mountain Nazca, Pablo worked at HSBC where he assessed business and credit opportunities in the Latin American market. He rapidly transitioned from a graduate scheme role to a managerial position in the Global Banking team. He has over 4 years’ experience in the entrepreneurial and startup scene, where he was involved as Co-founder in the launching of Origen, the first Mexican organic food store, fostering sustainable development across all aspects of the supply chain. <br>Pablo has an MSc in Investment Management from Cass Business School, London and holds a Bachelors degree in International Business from Universidad Iberoamericana in Mexico City.
-</p>
+                <p class="bio">Prior to Mountain Nazca, Pablo worked at HSBC where he assessed business and credit opportunities in the Latin American market. He rapidly transitioned from a graduate scheme role to a managerial position in the Global Banking team. He has over 4 years’ experience in the entrepreneurial and startup scene, where he was involved as Co-founder in the launching of Origen, the first Mexican organic food store, fostering sustainable development across all aspects of the supply chain. <br>Pablo has an MSc in Investment Management from Cass Business School, London and holds a Bachelors degree in International Business from Universidad Iberoamericana in Mexico City.</p>
 
                 <div class="social-icons">
                     <a class="linkedin"><a href="https://www.linkedin.com/in/pablo-rivero-746345106?trk=hp-identity-photo" target="_blank"><img src="style/images/art/btn-linkedin.png"></a>
