--- a/portfolio-colombia.html
+++ b/portfolio-colombia.html
@@ -41,7 +41,7 @@
                 <a href="portfolio-nazca.html">Portfolio</a>
               </li>
               <li >
-                <a href="team-nazca.html">Team</a>
+                <a href="team-all.html">Team</a>
               </li>
               <li>
                 <a href="contact-nazca.html">Contact</a>
@@ -58,7 +58,7 @@
 
   <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet our Companies </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div> -->
 
         <nav class="country">
             <ul>
@@ -77,16 +77,16 @@
         <img class="company-logo" src="style/images/art/logo-cm.png">
         <figure class="media-wrapper"><img src="style/images/art/criticalmasser.jpg" alt="" /></figure>
         <div class="details">
-          <p>Automated Social Epidemics for the Digital World</p>
+         <!--  <p>Automated Social Epidemics for the Digital World</p> -->
         </div>
         <!-- /.details --> 
       </div>
       <!-- /.span4 -->
       <div class="span4">
-        <img src="style/images/art/logo-platzi.png">
+        <img class="company-logo" src="style/images/art/logo-platzi.png">
         <figure class="media-wrapper"><img src="style/images/art/platzi.jpg" alt="" /></figure>
         <div class="details">
-          <p>Livestreamed classes on programming, design, business and marketing. Learn from industry leaders</p>
+         <!--  <p>Livestreamed classes on programming, design, business and marketing. Learn from industry leaders</p> -->
         </div>
         <!-- /.details --> 
       </div>
