--- a/portfolio-mexico.html
+++ b/portfolio-mexico.html
@@ -41,7 +41,7 @@
                 <a href="portfolio-nazca.html">Portfolio</a>
               </li>
               <li >
-                <a href="team-nazca.html">Team</a>
+                <a href="team-all.html">Team</a>
               </li>
               <li>
                 <a href="contact-nazca.html">Contact</a>
@@ -75,114 +75,122 @@
     <div class="row">
       <div class="span4">
         <img class="company-logo" src="style/images/art/logo-bluesmart.png">
-        <figure class="media-wrapper"><img src="style/images/art/bluesmart.jpg" alt="" /></figure>
+        <figure class="media-wrapper"><a href="http://bluesmart.com/" target="_blank"><img src="style/images/art/bluesmart.jpg"></a></figure>
         <div class="details">
-          <p>Bluesmart was founded on the principle that travel brings humanity closer together.</p>
+         <!--  <p class="company-description">Bluesmart was founded on the principle that travel brings humanity closer together.</p> -->
         </div>
       </div>
 
 
       <div class="span4">
-        <img src="style/images/art/logo-cm.png">
-        <figure class="media-wrapper"><img src="style/images/art/criticalmasser.jpg" alt="" /></figure>
+        <img class="company-logo" src="style/images/art/logo-cm.png">
+        <figure class="media-wrapper">
+          <a href="http://www.criticalmasser.com/" target="_blank">
+            <img src="style/images/art/criticalmasser.jpg" alt="" />
+          </a>
+        </figure>
         <div class="details">
-          <p>Social Epidemics for the digital world.</p>
+          <!-- <p class="company-description">Social Epidemics for the digital world.</p> -->
         </div>
       </div>
 
       <div class="span4">
-        <img src="style/images/art/logo-creze.png">
-        <figure class="media-wrapper"><img src="style/images/art/creze.jpg" alt="" /></figure>
+        <img class="company-logo" src="style/images/art/logo-creze.png">
+        <figure class="media-wrapper">
+          <a href="https://www.creze.com/#/">
+            <img src="style/images/art/creze.jpg" alt="" />
+          </a>
+        </figure>
         <div class="details">
-          <p>Aplica Online y obtén el préstamo que necesitas para tu negocio en 48 horas</p>
+         <!--  <p class="company-description">Aplica Online y obtén el préstamo que necesitas para tu negocio en 48 horas</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-luuna.png">
+        <img class="company-logo"src="style/images/art/logo-luuna.png">
         <figure class="media-wrapper"><img src="style/images/art/luuna.jpg" alt="" /></figure>
         <div class="details">
-          <p>El colchón premium a un precio honesto</p>
+          <!-- <p class="company-description">El colchón premium a un precio honesto</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-miora.png">
+        <img class="company-logo" src="style/images/art/logo-miora.png">
         <figure class="media-wrapper"><img src="style/images/art/miora.jpg" alt="" /></figure>
         <div class="details">
-          <p>Reserva online en los mejores centros de belleza</p>
+         <!--  <p class="company-description">Reserva online en los mejores centros de belleza</p> -->
         </div>
       </div>
 
       <div class="span4">
-        <img src="style/images/art/logo-miroculus.png">
+        <img class="company-logo"src="style/images/art/logo-miroculus.png">
         <figure class="media-wrapper"><img src="style/images/art/miroculus.jpg" alt="" /></figure>
         <div class="details">
-          <p>MicroRNA detection platform</p>
+          <!-- <p class="company-description">MicroRNA detection platform</p> -->
         </div>
       </div>
 
       <div class="span4">
-        <img src="style/images/art/logo-msb.png">
+        <img class="company-logo"src="style/images/art/logo-msb.png">
         <figure class="media-wrapper"><img src="style/images/art/msb.jpg" alt="" /></figure>
         <div class="details">
-          <p>La forma inteligente de apostar</p>
+          <!-- <p class="company-description">La forma inteligente de apostar</p> -->
         </div>
       </div>
 
       <div class="span4">
-        <img src="style/images/art/logo-nubleer.png">
+        <img class="company-logo"src="style/images/art/logo-nubleer.png">
         <figure class="media-wrapper"><img src="style/images/art/nubleer.jpg" alt="" /></figure>
         <div class="details">
-          <p>Acceso ilimitado a tus revistas favoritas</p>
+         <!--  <p class="company-description">Acceso ilimitado a tus revistas favoritas</p> -->
         </div>
       </div>
 
       <div class="span4">
-        <img src="style/images/art/logo-opi.png">
+        <img class="company-logo"src="style/images/art/logo-opi.png">
         <figure class="media-wrapper"><img src="style/images/art/opi.jpg" alt="" /></figure>
         <div class="details">
-          <p>Mejor información, mejores decisiones</p>
+          <!-- <p class="company-description">Mejor información, mejores decisiones</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-petsy.png">
+        <img class="company-logo"src="style/images/art/logo-petsy.png">
         <figure class="media-wrapper"><img src="style/images/art/petsy.jpg" alt="" /></figure>
         <div class="details">
-          <p>Compra accesorios para mascotas online, entrega a domicilio</p>
+         <!--  <p class="company-description">Compra accesorios para mascotas online, entrega a domicilio</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-seenapse.png">
+        <img class="company-logo"src="style/images/art/logo-seenapse.png">
         <figure class="media-wrapper"><img src="style/images/art/seenapse.jpg" alt="" /></figure>
         <div class="details">
-          <p>Get more and better ideas, faster.</p>
+          <!-- <p class="company-description">Get more and better ideas, faster.</p> -->
         </div>
       </div>
 
         <div class="span4">
-        <img src="style/images/art/logo-tp.png">
+        <img class="company-logo"src="style/images/art/logo-tp.png">
         <figure class="media-wrapper"><img src="style/images/art/talentprocess.jpg" alt="" /></figure>
         <div class="details">
-          <p>Optimizamos y automatizamos el proceso de reclutamiento</p>
+          <!-- <p class="company-description">Optimizamos y automatizamos el proceso de reclutamiento</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-tapptime.png">
+        <img class="company-logo"src="style/images/art/logo-tapptime.png">
         <figure class="media-wrapper"><img src="style/images/art/tt.jpg" alt="" /></figure>
         <div class="details">
-          <p>Gana premios solo por jugar</p>
+          <!-- <p class="company-description">Gana premios solo por jugar</p> -->
         </div>
       </div>
 
        <div class="span4">
-        <img src="style/images/art/logo-voxfeed.png">
+        <img class="company-logo"src="style/images/art/logo-voxfeed.png">
         <figure class="media-wrapper"><img src="style/images/art/voxfeed.jpg" alt="" /></figure>
         <div class="details">
-          <p>Conecta con las marcas que te gustan y gana dinero recomendándolas en tus redes sociales.</p>
+          <!-- <p class="company-description">Conecta con las marcas que te gustan y gana dinero recomendándolas en tus redes sociales.</p> -->
         </div>
       </div>
 
