--- a/portfolio-nazca.html
+++ b/portfolio-nazca.html
@@ -58,11 +58,11 @@
 
         <nav class="country">
             <ul>
-                <a href="#" class="selected switch-all">All</a>
-                <a href="#" class="switch-argentina">Argentina</a>
-                <a href="#" class="switch-chile">Chile</a>
-                <a href="#" class="switch-colombia">Colombia</a>
-                <a href="#" class="switch-mexico">México</a>
+                <a href="portfolio-nazca.html" class="selected">All</a>
+                <a href="portfolio-argentina.html">Argentina</a>
+                <a href="portfolio-chile.html">Chile</a>
+               <a href="portfolio-colombia.html">Colombia</a>
+                <a href="portfolio-mexico.html">México</a>
             </ul>
         </nav>
 
@@ -84,7 +84,7 @@
                 <a href="http://capitalizarme.com/cl/index.html" target="_blank" data-contenturl="portfolio-post3.html" data-callback="callPortfolioScripts();"><img src="style/images/art/capitalizarme.jpg" alt="" />
                     <div class="mask">
                         <h5>Capitalizarme</h5>
-                        <span class="tagline">La mejor forma de invertir en propiedades</span>
+                        <span class="tagline">The best way to invest in properties</span>
                     </div>
                 </a>
             </li>
@@ -119,7 +119,7 @@
                 <a href="https://www.creze.com/#/" target="_blank" data-contenturl="portfolio-post.html" data-callback="callPortfolioScripts();"><img src="style/images/art/creze.jpg" alt="" />
                     <div class="mask">
                         <h5>Creze</h5>
-                        <span class="tagline">Préstamos para tu negocio en 48 horas</span>
+                        <span class="tagline">Online lendings for your business</span>
                     </div>
                 </a>
             </li>
@@ -128,7 +128,7 @@
                 <a href="http://www.eltelon.com/" target="_blank" data-contenturl="portfolio-post2.html" data-callback="callPortfolioScripts();"><img src="style/images/art/eltelon.jpg" alt="" />
                     <div class="mask">
                         <h5>El Telón</h5>
-                        <span class="tagline">Tv y radio en vivo</span>
+                        <span class="tagline">TV and radio</span>
                     </div>
                 </a>
             </li>
@@ -137,7 +137,7 @@
                 <a href="http://www.glamit.com.ar/" target="_blank" data-contenturl="portfolio-post3.html" data-callback="callPortfolioScripts();"><img src="style/images/art/glamit.jpg" alt="" />
                     <div class="mask">
                         <h5>Glamit</h5>
-                        <span class="tagline">Ecommerce 360º</span>
+                        <span class="tagline">360º ecommerce</span>
                     </div>
                 </a>
             </li>
@@ -146,7 +146,7 @@
                 <a href="https://luuna.mx/" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/luuna.jpg" alt="" />
                     <div class="mask">
                         <h5>Luuna</h5>
-                        <span class="tagline">El colchón premium a un precio honesto</span>
+                        <span class="tagline">The premium mattress, honest price</span>
                     </div>
                 </a>
             </li>
@@ -164,7 +164,7 @@
                 <a href="https://misabogados.com/" target="_blank" data-contenturl="portfolio-post6.html" data-callback="callPortfolioScripts();"><img src="style/images/art/misabogados.jpg" alt="" />
                     <div class="mask">
                         <h5>Mis Abogados</h5>
-                        <span class="tagline">Buscamos el mejor abogado para tu caso</span>
+                        <span class="tagline">The best lawyer for your case</span>
                     </div>
                 </a>
             </li>
@@ -173,7 +173,7 @@
                 <a href="https://mysportsbox.com/" target="_blank" data-contenturl="portfolio-post.html" data-callback="callPortfolioScripts();"><img src="style/images/art/msb.jpg" alt="" />
                     <div class="mask">
                         <h5>My Sports Box</h5>
-                        <span class="tagline">La forma inteligente de apostar</span>
+                        <span class="tagline">The intelligence way to bet</span>
                     </div>
                 </a>
             </li>
@@ -182,7 +182,7 @@
                 <a href="http://www.nubelo.com/" target="_blank" data-contenturl="portfolio-post2.html" data-callback="callPortfolioScripts();"><img src="style/images/art/nubelo.jpg" alt="">
                     <div class="mask">
                         <h5>Nubelo</h5>
-                        <span class="tagline">Conectamos los mejores profesionales freelance y empresas</span>
+                        <span class="tagline">Connecting professional freelancers with companies</span>
                     </div>
                 </a>
             </li>
@@ -200,7 +200,7 @@
                 <a href="http://opi.la/" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/opi.jpg" alt="">
                     <div class="mask">
                         <h5>OPI</h5>
-                        <span class="tagline">Mejor información, mejores decisiones</span>
+                        <span class="tagline">Better information, better decisions</span>
                     </div>
                 </a>
             </li>
@@ -209,7 +209,7 @@
                 <a href="https://petsy.mx/" target="_blank" data-contenturl="portfolio-post5.html" data-callback="callPortfolioScripts();"><img src="style/images/art/petsy.jpg" alt="">
                     <div class="mask">
                         <h5>Petsy</h5>
-                        <span class="tagline">Compra accesorios para mascotas online</span>
+                        <span class="tagline">Online shopping for your pet</span>
                     </div>
                 </a>
             </li>
@@ -227,7 +227,7 @@
                 <a href="http://www.poliglota.org/" target="_blank" data-contenturl="portfolio-post.html" data-callback="callPortfolioScripts();"><img src="style/images/art/poliglota.jpg" alt="">
                     <div class="mask">
                         <h5>Poliglota</h5>
-                        <span class="tagline">Red social de idiomas</span>
+                        <span class="tagline">Languages social media</span>
                     </div>
                 </a>
             </li>
