--- a/team-all.html
+++ b/team-all.html
@@ -38,7 +38,7 @@
                                 <a href="portfolio-nazca.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="team-nazca.html">Team</a>
+                                <a href="team-all.html">Team</a>
                             </li>
                             <li>
                                 <a href="contact-nazca.html">Contact</a>
@@ -53,19 +53,20 @@
         <!-- .navbar -->
         <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3>
-        </div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3>
+        </div> -->
         <nav class="country">
             <ul>
-                <a href="team-all.html" class="switch-all selected">All</a>
-                <a href="team-argentina.html" class="switch-argentina">Argentina</a>
-                <a href="team-chile.html" class="switch-chile">Chile</a>
-                <a href="team-colombia.html" class="switch-colombia">Colombia</a>
-                <a href="team-mexico.html" class="switch-mexico">México</a>
+                <a href="team-all.html" class="selected">All</a>
+                <a href="team-argentina.html">Argentina</a>
+                <a href="team-chile.html">Chile</a>
+                <a href="team-colombia.html">Colombia</a>
+                <a href="team-mexico.html">México</a>
             </ul>
         </nav>
         <div class="full-portfolio">
             <ul class="content-sliders items">
+                
                 <!--        MEXICO -->
                 <li class="item overlay mexico">
                     <a href="hector-sepulveda.html" target="_blank" data-contenturl="portfolio-post3.html" data-callback="callPortfolioScripts();"><img src="style/images/art/hector.jpg" alt="" />
@@ -168,7 +169,7 @@
                 </li>
 
                  <li class="item overlay colombia">
-                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-she.jpg" alt="" />
+                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/natalia.jpg" alt="" />
                         <div class="mask">
                             <h5>Natalia Cobo</h5>
                             <span class="tagline">Compliance & Legal Manager</span>
@@ -179,7 +180,7 @@
              <!--    CHILE -->
 
               <li class="item overlay chile">
-                    <a href="felipe-henriquez.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
+                    <a href="felipe-henriquez.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/felipe.jpg" alt="" />
                         <div class="mask">
                             <h5>Felipe Henríquez</h5>
                             <span class="tagline">Managing Partner</span>
@@ -188,7 +189,7 @@
                 </li>
 
                  <li class="item overlay chile">
-                    <a href="alan-farcas.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
+                    <a href="alan-farcas.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/alan.jpg" alt="" />
                         <div class="mask">
                             <h5>Alan Farcas</h5>
                             <span class="tagline">Managing Partner</span>
@@ -196,40 +197,14 @@
                     </a>
                 </li>
 
-                   <li class="item overlay chile">
-                    <a href="nicolas-casado.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
-                        <div class="mask">
-                            <h5>Nicolás Casado</h5>
-                            <span class="tagline">Legal Controller</span>
-                        </div>
-                    </a>
-                </li>
-
-                   <li class="item overlay chile">
-                    <a href="hilsa-oliveros.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-she.jpg" alt="" />
-                        <div class="mask">
-                            <h5>Hilsa Oliveros</h5>
-                            <span class="tagline">Accounting Controller</span>
-                        </div>
-                    </a>
-                </li>
 
              <!--    ARGENTINA -->
 
                 <li class="item overlay argentina">
-                    <a href="eduardo-amadeo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
+                    <a href="eduardo-amadeo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/eduardo.jpg" alt=""/>
                         <div class="mask">
                             <h5>Eduardo Amadeo</h5>
                             <span class="tagline">Managing Partner</span>
-                        </div>
-                    </a>
-                </li>
-
-                   <li class="item overlay argentina">
-                    <a href="alex-brill.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
-                        <div class="mask">
-                            <h5>Alex Brill</h5>
-                            <span class="tagline">Business Analyst</span>
                         </div>
                     </a>
                 </li>
