--- a/team-argentina.html
+++ b/team-argentina.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Chile</title>
+  <title>Team Argentina</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -57,102 +57,35 @@
 
 
   <div class="offset-sections"></div>
-        <h2 class="post-title-sections">Meet our Companies </h2>
+        <h2 class="post-title-sections">Meet the Team </h2>
         <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div> -->
 
         <nav class="country">
             <ul>
-                <a href="portfolio-nazca.html">All</a>
-                <a href="portfolio-nazca.html ">Argentina</a>
-                <a href="portfolio-chile.html" class="selected">Chile</a>
-                <a href="portfolio-colombia.html">Colombia</a>
-                <a href="portfolio-mexico.html">México</a>
+                <a href="team-all.html">All</a>
+                <a href="team-argentina.html" class="selected">Argentina</a>
+                <a href="team-chile.html">Chile</a>
+                <a href="team-colombia.html">Colombia</a>
+                <a href="team-mexico.html">México</a>
             </ul>
         </nav>
+    <div class="full-portfolio">
+      <ul class="content-sliders items">
+        <li class="item overlay">
+                    <a href="eduardo-amadeo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/eduardo.jpg" alt="" />
+                        <div class="mask">
+                            <h5>Eduardo Amadeo</h5>
+                            <span class="tagline">Managing Partner</span>
+                        </div>
+                    </a>
+                </li>
 
-<div class="offset"></div>
-  <div class="container inner">
-    <div class="row">
-      <div class="span4">
-        <img class="company-logo" src="style/images/art/logo-capitalizarme.png">
-        <figure class="media-wrapper"><img src="style/images/art/capitalizarme.jpg" alt="" /></figure>
-        <div class="details">
-        <!--   <p>La mejor forma de invertir en Propiedades</p> -->
-        </div>
-      </div>
 
-
-      <div class="span4">
-        <img class="company-logo" src="style/images/art/logo-clubpoint.png">
-        <figure class="media-wrapper"><img src="style/images/art/clubpoint.jpg" alt="" /></figure>
-        <div class="details">
-<!--           <p>Tu club privado de compras</p> -->
-        </div>
-      </div>
-
-      <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-cranberry.png">
-        <figure class="media-wrapper"><img src="style/images/art/cranberry.jpg" alt="" /></figure>
-        <div class="details">
-          <!-- <p>La red social de moda</p> -->
-        </div>
-      </div>
-
-       <div class="span4">
-        <img class="company-logo" src="style/images/art/logo-eltelon.png">
-        <figure class="media-wrapper"><img src="style/images/art/eltelon.jpg" alt="" /></figure>
-        <div class="details">
-         <!--  <p>Cientos de canales de tv y radios en vivo</p> -->
-        </div>
-      </div>
-
-       <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-glamit.png">
-        <figure class="media-wrapper"><img src="style/images/art/glamit.jpg" alt="" /></figure>
-        <div class="details">
-         <!--  <p> El primer proveedor integral de ecommerce</p> -->
-        </div>
-      </div>
-
-      <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-misabogados.png">
-        <figure class="media-wrapper"><img src="style/images/art/misabogados.jpg" alt="" /></figure>
-        <div class="details">
-          <!-- <p>Buscamos al mejor abogado para tu caso</p> -->
-        </div>
-      </div>
-
-      <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-nubelo.png">
-        <figure class="media-wrapper"><img src="style/images/art/nubelo.jpg" alt="" /></figure>
-        <div class="details">
-          <!-- <p>Conectamos los mejores profesionales y empresas</p> -->
-        </div>
-      </div>
-
-      <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-poliglota.png">
-        <figure class="media-wrapper"><img src="style/images/art/poliglota.jpg" alt="" /></figure>
-        <div class="details">
-         <!--  <p>Aprende idiomas en bares y cafés de todo el mundo</p> -->
-        </div>
-      </div>
-
-      <div class="span4">
-        <img class="company-logo"src="style/images/art/logo-recorrido.png">
-        <figure class="media-wrapper"><img src="style/images/art/recorrido.jpg" alt="" /></figure>
-        <div class="details">
-         <!--  <p>Encuentra el mejor pasaje de bus</p> -->
-        </div>
-      </div>
-
-       
-      
-      </div>
+    </ul>
+      <!-- /.items -->
     </div>
-  </div>
+    <!-- /.full-portfolio -->
 
- 
 
 <footer>
           <div id="footer" class="navbar">
