--- a/team-colombia.html
+++ b/team-colombia.html
@@ -41,7 +41,7 @@
                 <a href="portfolio-nazca.html">Portfolio</a>
               </li>
               <li >
-                <a href="team-nazca.html">Team</a>
+                <a href="team-all.html">Team</a>
               </li>
               <li>
                 <a href="contact-nazca.html">Contact</a>
@@ -58,14 +58,14 @@
 
   <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div>
-
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div>
+ -->
         <nav class="country">
             <ul>
                 <a href="team-all.html">All</a>
                 <a href="team-argentina.html">Argentina</a>
                 <a href="team-chile.html">Chile</a>
-                <a href="#" class="selected">Colombia</a>
+                <a href="team-colombia.html" class="selected">Colombia</a>
                 <a href="team-mexico.html">México</a>
             </ul>
         </nav>
@@ -90,7 +90,7 @@
                 </li>
 
                  <li class="item overlay">
-                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/natalia.jpg" alt="" />
                         <div class="mask">
                             <h5>Natalia Cobo</h5>
                             <span class="tagline">Compliance & Legal Manager</span>
