--- a/team-mexico.html
+++ b/team-mexico.html
@@ -41,7 +41,7 @@
                 <a href="portfolio-nazca.html">Portfolio</a>
               </li>
               <li >
-                <a href="team-nazca.html">Team</a>
+                <a href="team-all.html">Team</a>
               </li>
               <li>
                 <a href="contact-nazca.html">Contact</a>
@@ -58,15 +58,15 @@
 
   <div class="offset-sections"></div>
         <h2 class="post-title-sections">Meet the Team </h2>
-        <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div>
+        <!-- <div class="post-secundary-sections">We invest and build tech companies with exceptional teams and products that can thrive in the regional and global landscapes</h3></div> -->
 
         <nav class="country">
             <ul>
-                <a href="#">All</a>
-                <a href="#">Argentina</a>
-                <a href="#">Chile</a>
-                <a href="#">Colombia</a>
-                <a href="#" class="selected">México</a>
+                <a href="team-all.html">All</a>
+                <a href="team-argentina.html">Argentina</a>
+                <a href="team-chile.html">Chile</a>
+                <a href="team-colombia.html">Colombia</a>
+                <a href="team-mexico.html" class="selected">México</a>
             </ul>
         </nav>
     <div class="full-portfolio">
